# huntfact

./: ANDROID_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  UI_DIRECTION_01_CLEAN_ENTERPRISE.md  UI_DIRECTION_02_BOLD_MODERN_CONSUMER.md  UI_DIRECTION_03_EDITORIAL_MINIMAL.md  UI_DIRECTION_04_NEO_SURFACE.md  UI_DIRECTION_05_DARK_FIRST_CYBER_CLEAN.md  claim_extractor_prompt.md  claim_output_schema.md  docker-compose.yml  example_output.md  guardrails.md  production_concerns.md  production_concerns_tiered.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  android_simulator.py  app.py  chroma_client.py  config.py  exceptions.py  firebase_config.py  health.py  json_string.py  llm.py  logger.py  logging_config.py  main.py  observability_setup.md  orchestrator.py  pyproject.toml  result_schema.py  router.py  schemas.py  setup_commands.md  web_search_example.py  worker.py  workflow_cleanup.py
backend/agents/: ClaimExtractor.py  ClaimVerifier.py  ReasoningAgent.py  TranslationAgent.py
backend/agents/tools/: __init__.py  (+2 more)
backend/alembic/: env.py
backend/alloy/: config.alloy
backend/auth/: __init__.py  supabase_auth.py
backend/controllers/: health.py  hunt.py
backend/db/: database.py
backend/docker/: migrate.sh
backend/redis/: __init__.py  client.py  helpers.py
backend/rmq/: connection.py  constants.py  consumer.py  publisher.py  schemas.py
backend/rmq_redis/: README.md  __init__.py  keys.py  repository.py
backend/routes/: health.py  hunt.py
backend/test_scripts/: run.py  test_claim_extractor.py  test_claim_verifier.py  test_extract_questions.py  test_fetch_urls.py  test_firecrawl.py  test_get_audio_cdn_link_from_html.py  test_get_cdn_links_from_html.py  test_handler.py  test_rag_retrieval.py  test_rag_storage_pipeline.py  test_save_result_to_db.py  test_scraper.py  test_select_urls.py  test_transcriber.py  test_translator.py  test_url_fetcher.py  test_web_scraper.py  test_web_search_tool.py  test_web_searcher.py
(+283 files in other folders)
