[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.15",
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "openai>=2.30.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
]
